<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>hellocucumber</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <encoding>UTF-8</encoding>
          <source>21</source>
          <target>21</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.13.0</version>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.1</version>
      </plugin>

      <plugin>
        <artifactId>cluecumber-maven</artifactId>
        <configuration>
          <expandAttachments>true</expandAttachments>
          <expandBeforeAfterHooks>true</expandBeforeAfterHooks>
          <failScenariosOnPendingOrUndefinedSteps>true</failScenariosOnPendingOrUndefinedSteps>
          <generatedHtmlReportDirectory>${project.build.directory}/generated-report
          </generatedHtmlReportDirectory>
          <sourceJsonReportDirectory>${project.build.directory}/cucumber-report
          </sourceJsonReportDirectory>
        </configuration>
        <groupId>com.trivago.rta</groupId>
        <version>3.1.0</version>
      </plugin>

    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>cucumber-java</artifactId>
      <groupId>io.cucumber</groupId>
    </dependency>

    <dependency>
      <artifactId>cucumber-junit-platform-engine</artifactId>
      <groupId>io.cucumber</groupId>
    </dependency>

    <dependency>
      <artifactId>rest-assured</artifactId>
      <groupId>io.rest-assured</groupId>
      <version>5.5.0</version>
    </dependency>

    <dependency>
      <artifactId>junit-platform-suite</artifactId>
      <groupId>org.junit.platform</groupId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <artifactId>cucumber-picocontainer</artifactId>
      <groupId>io.cucumber</groupId>
      <version>7.18.1</version>
    </dependency>

    <dependency>
      <artifactId>playwright</artifactId>
      <groupId>com.microsoft.playwright</groupId>
      <version>1.47.0</version>
    </dependency>

    <dependency>
      <artifactId>httpclient5</artifactId>
      <groupId>org.apache.httpcomponents.client5</groupId>
      <version>5.3.1</version>
    </dependency>

    <dependency>
      <artifactId>json-path</artifactId>
      <groupId>com.jayway.jsonpath</groupId>
      <version>2.9.0</version>
    </dependency>

    <dependency>
      <artifactId>gson</artifactId>
      <groupId>com.google.code.gson</groupId>
      <version>2.11.0</version>
    </dependency>

    <dependency>
      <artifactId>har-java</artifactId>
      <groupId>com.smartbear</groupId>
      <version>1.0.0</version>
    </dependency>

  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>cucumber-bom</artifactId>
        <groupId>io.cucumber</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>7.18.1</version>
      </dependency>
      <dependency>
        <artifactId>junit-bom</artifactId>
        <groupId>org.junit</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>5.10.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <groupId>hellocucumber</groupId>

  <modelVersion>4.0.0</modelVersion>

  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <version>1.0.0-SNAPSHOT</version>
</project>
